--- a/Mom_Baby/res/layout/activity_addbaby1.xml
+++ b/Mom_Baby/res/layout/activity_addbaby1.xml
@@ -1,8 +1,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="15dp" >
+    android:orientation="vertical" >
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -45,146 +44,153 @@
             android:textColor="#ffffff" />
     </LinearLayout>
 
-    <ImageButton
-        android:layout_width="match_parent"
-        android:layout_height="130dp"
-        android:layout_marginTop="20dp"
-        android:background="@drawable/baby1" />
-
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:orientation="horizontal" >
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:padding="15dp" >
 
-        <TextView
-            android:layout_width="90dp"
-            android:layout_height="wrap_content"
-            android:padding="15dp"
-            android:text="이름" />
-
-        <EditText
-            android:layout_width="130dp"
-            android:layout_height="wrap_content" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal" >
-
-        <TextView
-            android:layout_width="90dp"
-            android:layout_height="wrap_content"
-            android:padding="15dp"
-            android:text="생년월일" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="생년월일 intent들어갈 자리" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal" >
-
-        <TextView
-            android:layout_width="90dp"
-            android:layout_height="wrap_content"
-            android:padding="15dp"
-            android:text="성별" />
-
-        <RadioGroup
+        <ImageButton
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="130dp"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/baby1" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
             android:orientation="horizontal" >
 
-            <RadioButton
+            <TextView
                 android:layout_width="90dp"
                 android:layout_height="wrap_content"
-                android:text="여아" />
+                android:padding="15dp"
+                android:text="이름" />
 
-            <RadioButton
+            <EditText
+                android:layout_width="130dp"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal" >
+
+            <TextView
                 android:layout_width="90dp"
                 android:layout_height="wrap_content"
-                android:text="남아" />
-        </RadioGroup>
+                android:padding="15dp"
+                android:text="생년월일" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="생년월일 intent들어갈 자리" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal" >
+
+            <TextView
+                android:layout_width="90dp"
+                android:layout_height="wrap_content"
+                android:padding="15dp"
+                android:text="성별" />
+
+            <RadioGroup
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal" >
+
+                <RadioButton
+                    android:layout_width="90dp"
+                    android:layout_height="wrap_content"
+                    android:text="여아" />
+
+                <RadioButton
+                    android:layout_width="90dp"
+                    android:layout_height="wrap_content"
+                    android:text="남아" />
+            </RadioGroup>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal" >
+
+            <TextView
+                android:layout_width="90dp"
+                android:layout_height="wrap_content"
+                android:padding="15dp"
+                android:text="신장" />
+
+            <EditText
+                android:layout_width="130dp"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingLeft="10dp"
+                android:text="cm" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal" >
+
+            <TextView
+                android:layout_width="90dp"
+                android:layout_height="wrap_content"
+                android:padding="15dp"
+                android:text="몸무게" />
+
+            <EditText
+                android:layout_width="130dp"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingLeft="10dp"
+                android:text="kg" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal" >
+
+            <TextView
+                android:layout_width="90dp"
+                android:layout_height="wrap_content"
+                android:padding="15dp"
+                android:text="머리둘레" />
+
+            <EditText
+                android:layout_width="130dp"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingLeft="10dp"
+                android:text="cm" />
+        </LinearLayout>
+
+        <Button
+            android:id="@+id/btn_addbaby2"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="20dp"
+            android:text="NEXT" />
     </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal" >
-
-        <TextView
-            android:layout_width="90dp"
-            android:layout_height="wrap_content"
-            android:padding="15dp"
-            android:text="신장" />
-
-        <EditText
-            android:layout_width="130dp"
-            android:layout_height="wrap_content" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingLeft="10dp"
-            android:text="cm" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal" >
-
-        <TextView
-            android:layout_width="90dp"
-            android:layout_height="wrap_content"
-            android:padding="15dp"
-            android:text="몸무게" />
-
-        <EditText
-            android:layout_width="130dp"
-            android:layout_height="wrap_content" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingLeft="10dp"
-            android:text="kg" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal" >
-
-        <TextView
-            android:layout_width="90dp"
-            android:layout_height="wrap_content"
-            android:padding="15dp"
-            android:text="머리둘레" />
-
-        <EditText
-            android:layout_width="130dp"
-            android:layout_height="wrap_content" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingLeft="10dp"
-            android:text="cm" />
-    </LinearLayout>
-
-    <Button
-        android:id="@+id/btn_addbaby2"
-        android:layout_width="100dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="20dp"
-        android:text="NEXT" />
 
 </LinearLayout>
